--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: layout
 ---
+{% include social_plugins.js %}
 
 <div class="content">
 	{% include post_header.html %}
@@ -10,8 +11,17 @@ layout: layout
 	</div>
 	</div>
 
+	<br/>
 	<div class="row">
-			<p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}"><i class="icon-chevron-left"></i></a>{% endif %} {% if page.next.url %} <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}"><i class="icon-chevron-right"></i></a> {% endif %} </p>
+		<div class="col-md-7">
+        <div class="fb-like" data-href="{{ site.url }}{{page.url}}" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+        <script type="IN/Share" data-url="{{ site.url }}{{page.url}}" data-counter="right"></script>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{page.url}}"{% if page.hashtag %} data-hashtags="{{ page.hashtag }}"{% endif %}>Tweet</a>
+		</div>
+
+		<div class="col-md-3">
+		<a class="btn btn-success btn-lg" href="/blog.html" role="button">Read Other Blog</a>
+		</div>
 	</div>
 
 	<div class="row">
