--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,9 +10,10 @@
 	</div>
 	<div class="collapse navbar-collapse">
 	  <ul class="nav navbar-nav">
-		<li><a href="/blog.html"><i class="icon-pencil"></i> Blog</a> </li>
-		<li><a href="/index.html"><i class="icon-signal"></i> Demo</a> </li>
-		<li><a href="/contact.html"><i class="icon-envelope"></i> Contact Us</a> </li>
+		<li><a href="/index.html#TECHNOLOGY"><span class="glyphicon glyphicon-cloud"></span> Technology</a> </li>
+		<li><a href="/index.html#CONTACT"><span class="glyphicon glyphicon-envelope"></span> Contact</a> </li>
+		<li{% if page.url == '/blog.html' or page.url contains '/blog/' %} class="acmenu"{% endif %}><a href="/blog.html"><span class="glyphicon glyphicon-pencil"></span> Blog</a> </li>
+		<li{% if page.url == '/demo.html' %} class="acmenu"{% endif %}><a href="/gitanalytik.html"><span class="glyphicon glyphicon-stats"></span> Demo</a> </li>
 	  </ul>
 	</div>
   </div>
