Customize landing page

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -33,8 +33,10 @@
 			</div>
             <div class="col-md-4">
 			<h1 style="font-family: 'Oswald', sans-serif; font-size: 400%;">EXPLORE<br/>the data<br/>INSTANTLY</h1>
-			<a href="https://twitter.com/thebriskat" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @thebriskat</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		<!--	<a href="https://twitter.com/thebriskat" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @thebriskat</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>-->
+			<a class="btn btn-success btn-lg" href="http://gcharts.briskat.com:8080" role="button">
+			<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> Try Gitcharts </a>
 			<br/><br/>
             </div>
 		</div>
