Update demo page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
 		<li><a href="/index.html#TECHNOLOGY"><span class="glyphicon glyphicon-cloud"></span> Technology</a> </li>
 		<li><a href="/index.html#CONTACT"><span class="glyphicon glyphicon-envelope"></span> Contact</a> </li>
 		<li{% if page.url == '/blog.html' or page.url contains '/blog/' %} class="acmenu"{% endif %}><a href="/blog.html"><span class="glyphicon glyphicon-pencil"></span> Blog</a> </li>
-		<li{% if page.url == '/demo.html' %} class="acmenu"{% endif %}><a href="/gitanalytik.html"><span class="glyphicon glyphicon-stats"></span> Demo</a> </li>
+		<li><a href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5"> <span class="glyphicon glyphicon-stats"></span> Demo</a> </li>
 	  </ul>
 	</div>
   </div>
