--- a/_includes/post_items.html
+++ b/_includes/post_items.html
@@ -1,4 +1,9 @@
 <h3><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h3>
-<p><small>{{ post.author }}, {{ post.date | date: "%Y-%m-%d" }}</small></p>
+<p><small>{{ post.author }}, {{ post.date | date: "%Y-%m-%d" }}{% if post.thumbups > 0 %}, <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>{{ post.thumbups }}{% endif %}
+</small></p>
+<!-- <p><div class="fb-like" data-href="{{ site.url }}{{ post.url }}" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+   <script type="IN/Share" data-url="{{ site.url }}{{ post.url }}" data-counter="right"></script>
+   <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ post.url }}">Tweet</a>
+</p> -->
 <p><i>{{ post.excerpt }}</i></p>
 <p>{% for tag in post.tags %} <a href="/tags/{{ tag }}" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}</p>
