--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -15,9 +15,37 @@
 
 	<link rel="stylesheet" href="/bs_3_2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/my.css"> <!-- customize bootstrap here ! -->
+
+	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   </head>
 <body>
 {% include navigation.html %}
+{% if page.url == '/index.html' %}
+<header>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-4">
+				<br/>
+				<div class="embed-responsive embed-responsive-16by9">
+				  <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/Dp5jRJPFOiA?showinfo=0&rel=0&autohide=1" style="border: 3px solid #aaa;" allowfullscreen></iframe>
+				</div>
+				<small>Our story in less than 2 minutes</small>
+			</div>
+            <div class="col-md-4">
+			<h1 style="font-family: 'Oswald', sans-serif; font-size: 400%;">EXPLORE<br/>the data<br/>INSTANTLY</h1>
+			<a href="https://twitter.com/thebriskat" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @thebriskat</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+			<br/><br/>
+            </div>
+		</div>
+        <div class="row">
+            <div class="col-md-11"></div>
+            <div class="col-md-1">
+			<small><a href="http://mockmoon.sblo.jp/"><span class="glyphicon glyphicon-camera" aria-hidden="true" style="color: #47637b;" allowfullscreen></iframe></span></a></small>
+			</div>
+		</div>
+</header>
+{% endif %}
 
 <div class="container">
 	{{ content }}
