--- a/css/my.css
+++ b/css/my.css
@@ -27,3 +27,12 @@ header {
     background-size: cover;
     -o-background-size: cover;
 }
+.panel-heading a:after {
+    font-family:'Glyphicons Halflings';
+    content:"\e114";
+    float: right;
+    color: grey;
+}
+.panel-heading a.collapsed:after {
+    content:"\e080";
+}
