--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -2,18 +2,23 @@
 
 <div class="row">
 	<div class="col-md-9">
-		<p><h1>{{ page.title }}</h1></p>
+		<h1>{{ page.title }}</h1>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-9">
-		<small><b>{{ page.author }}</b>, {{ page.date | date: "%Y-%m-%d" }}</small>
-<p><div class="fb-like" data-href="{{ site.url }}{{ page.url }}" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
-   <script type="IN/Share" data-url="{{ site.url }}{{ page.url }}" data-counter="right"></script>
-   <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{ page.url }}">Tweet</a>
-   </p>
+    <div class="col-md-5">
+        <small><b>{{ page.author }}</b>, {{ page.date | date: "%Y-%m-%d" }}</small>
+    </div>
+    <div class="col-md-4">
+        <div class="fb-like" data-href="{{ site.url }}{{ page.url }}" data-layout="button_count" data-action="recommend" data-show-faces="false" data-share="false"></div>
+        <script type="IN/Share" data-url="{{ site.url }}{{ page.url }}" data-counter="right"></script>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ site.url }}{{page.url}}"{% if page.hashtag %} data-hashtags="{{ page.hashtag }}"{% endif %}>Tweet</a>
+    </div>
+</div>
+<div class="row">
 		{% for tag in page.tags %} <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a> {% if forloop.last != true %} {% endif %} {% endfor %}
-	</div>
+</div>
+<div class="row">
 	<div class="col-md-9">
 		<p class="pull-right">{% if page.previous.url %} <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}"><i class="icon-chevron-left"></i></a> 	{% endif %}   {% if page.next.url %} 	<a href="{{page.next.url}}" title="Next Post: {{page.next.title}}"><i class="icon-chevron-right"></i></a> 	{% endif %} </p>
 	</div>
