Add 5. blog post - micro-caching

--- a/css/my.css
+++ b/css/my.css
@@ -37,4 +37,7 @@ header {
 .panel-heading a.collapsed:after {
     content:"\e080";
 }
+th, td {
+    text-align: center;
+}
 .fb_iframe_widget span { vertical-align: text-bottom; float: left; }
