--- a/css/my.css
+++ b/css/my.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4 {
 header {
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header.jpg);
+    background-image: linear-gradient(90deg, #a4b357, #75890c);
     background-position: center center;
     background-repeat: none;
     padding: 10px;
