--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -24,27 +24,45 @@
 {% if page.url == '/index.html' %}
 <header>
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-4">
-				<br/>
-				<div class="embed-responsive embed-responsive-16by9">
-				  <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/Dp5jRJPFOiA?showinfo=0&rel=0&autohide=1" style="border: 3px solid #aaa;" allowfullscreen></iframe>
+			<div class="col-md-12">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			  </ol>
+
+			  <div class="carousel-inner">
+				<div class="item active">
+				  <img src="img/l1.png">
+				  <div class="carousel-caption">
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
+						GET THE FACTS FROM YOUR DATA</h1><br/>
+				  </div>
 				</div>
-				<small>Our story in less than 2 minutes</small>
-			</div>
-            <div class="col-md-4">
-			<h1 style="font-family: 'Oswald', sans-serif; font-size: 400%;">EXPLORE<br/>the data<br/>INSTANTLY</h1>
-		<!--	<a href="https://twitter.com/thebriskat" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @thebriskat</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>-->
-			<a class="btn btn-success btn-lg" href="http://gcharts.briskat.com:8080" role="button">
-			<span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span> Try Gitcharts </a>
-			<br/><br/>
-            </div>
-		</div>
-        <div class="row">
-            <div class="col-md-11"></div>
-            <div class="col-md-1">
-			<small><a href="http://mockmoon.sblo.jp/"><span class="glyphicon glyphicon-camera" aria-hidden="true" style="color: #47637b;" allowfullscreen></iframe></span></a></small>
+				<div class="item">
+				  <img src="img/l1.png">
+				  <div class="carousel-caption">
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
+						MAKE FACT-BASED DECISIONS</h1><br/>
+				  </div>
+				</div>
+				<div class="item">
+				  <img src="img/l1.png">
+				  <div class="carousel-caption">
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
+						INSTANTLY</h1><br/>
+				  </div>
+				</div>
+			  </div>
+
+			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left"></span>
+			  </a>
+			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right"></span>
+			  </a>
+			</div> <!-- Carousel -->
 			</div>
 		</div>
 </header>
