--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>{% if page.title %}{{page.title}}{% else %}Briskat, Database for Interactive Analytics{% endif %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}Analytical database service that allows you to add your own interactive in-depth analytics.{% endif %}">
+    <meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}Incredibly fast analytical database as a service.{% endif %}">
     <meta name="author" content="briskat">
 
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="{% if page.title %}{{page.title}}{% else %}Briskat, Database for Interactive Analytics{% endif %}">
-	<meta property="og:description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}Interactive user experience in analytics. Multiuser Interactive Analytical database{% endif %}">
+	<meta property="og:description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}Incredibly fast analytic database as a service. Scalable, agnostic, easy to integrate with.{% endif %}">
 	<meta property="og:site_name" content="Briskat">
 {% if page.image %}<meta property="og:image" content="{{ site.url }}/img/posts/{{page.image}}">{% endif %}
 
@@ -30,28 +30,39 @@
 				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="4"></li>
 			  </ol>
 
 			  <div class="carousel-inner">
 				<div class="item active">
 				  <img src="img/l1.png">
 				  <div class="carousel-caption">
-					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
-						GET THE FACTS FROM YOUR DATA</h1><br/>
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">INCREDIBLY FAST</h1>
 				  </div>
 				</div>
 				<div class="item">
 				  <img src="img/l1.png">
 				  <div class="carousel-caption">
-					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
-						MAKE FACT-BASED DECISIONS</h1><br/>
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">SCALABLE</h1>
 				  </div>
 				</div>
 				<div class="item">
 				  <img src="img/l1.png">
 				  <div class="carousel-caption">
-					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">
-						INSTANTLY</h1><br/>
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">AFFORDABLE</h1>
+				  </div>
+				</div>
+				<div class="item">
+				  <img src="img/l1.png">
+				  <div class="carousel-caption">
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">AGNOSTIC</h1>
+				  </div>
+				</div>
+				<div class="item">
+				  <img src="img/l1.png">
+				  <div class="carousel-caption">
+					<h1 style="font-family: 'Oswald', sans-serif; font-size: 260%;">EASY TO INTEGRATE</h1>
 				  </div>
 				</div>
 			  </div>
