--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
+<hr/>
 <footer class="footer">
+<div class="navbar navbar-inverse" role="navigation">
   <div class="container">
-	<p class="pull-right">{% if page.previous.url %}<a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Blog Post</a> | {% endif %}<a href="#">Back to top</a>{% if page.next.url %} | <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Blog Post &raquo; </a>{% endif %}</p>
-	<p><a href="https://github.com/briskat/briskat.github.io/issues/new">Issue with our website?</a></p>
+	<div class="collapse navbar-collapse">
+	  <ul class="nav navbar-nav">
+		<li><a href="https://github.com/briskat/briskat.github.io/issues/new">Issue with our website?</a></li>
+	    <li>{% if page.previous.url %}<a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; Previous Blog Post</a>{% endif %}</li>
+	    <li><a href="#">Back to top</a><li>
+		<li>{% if page.next.url %}<a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">Next Blog Post &raquo; </a>{% endif %}</li>
+	  </ul>
+	</div>
   </div>
+</div>
 </footer>
